cmake_minimum_required(VERSION 3.13)
project(rsa306_source)

file(GLOB SRC "src/*.cpp")

include(${SDRPP_MODULE_CMAKE})

if (MSVC)
    set(RSA_API_ROOT "C:/Tektronix/RSA_API" CACHE PATH "Root folder of the Tektronix RSA API")
    target_include_directories(rsa306_source PRIVATE "${RSA_API_ROOT}/include")
    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
        target_link_directories(rsa306_source PRIVATE "${RSA_API_ROOT}/lib/x64")
    else ()
        target_link_directories(rsa306_source PRIVATE "${RSA_API_ROOT}/lib/x86")
    endif ()
    target_link_libraries(rsa306_source PRIVATE RSA_API)
else ()
    find_path(RSA_API_INCLUDE_DIR RSA_API.h PATHS /usr/include /usr/local/include)
    find_library(RSA_API_LIBRARY NAMES RSA_API PATHS /usr/lib /usr/local/lib)
    if (NOT RSA_API_INCLUDE_DIR OR NOT RSA_API_LIBRARY)
        message(FATAL_ERROR "Could not find Tektronix RSA API headers/libraries. Set RSA_API_INCLUDE_DIR and RSA_API_LIBRARY.")
    endif ()
    target_include_directories(rsa306_source PRIVATE ${RSA_API_INCLUDE_DIR})
    target_link_libraries(rsa306_source PRIVATE ${RSA_API_LIBRARY})
endif ()
